36472 Replace repos extending ReadOnlyResourceRepositoryBase MediaTypeRepository but dina-abse 0.144 required to get the LIKE oprator working