@@ -2,9 +2,6 @@ package ca.gc.aafc.objectstore.api.repository;
 
 import ca.gc.aafc.objectstore.api.BaseIntegrationTest;
 import ca.gc.aafc.objectstore.api.dto.MediaTypeDto;
-import io.crnk.core.queryspec.FilterOperator;
-import io.crnk.core.queryspec.PathSpec;
-import io.crnk.core.queryspec.QuerySpec;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.MediaType;
 
@@ -20,21 +17,16 @@ public class MediaTypeRepositoryIT extends BaseIntegrationTest {
 
   @Test
   public void findMediaTypeList_whenFindAll_mediaTypeListReturned() {
-    List<MediaTypeDto> mediaTypeList = mediaTypeRepository
-            .findAll(new QuerySpec(MediaTypeDto.class));
+    List<MediaTypeDto> mediaTypeList = mediaTypeRepository.findAll("");
     assertNotNull(mediaTypeList);
-    assertNotNull(mediaTypeList.get(0));
+    assertNotNull(mediaTypeList.getFirst());
   }
 
   @Test
   public void findMediaTypeList_onFilter_MediaTypeReturned() {
-    QuerySpec q = new QuerySpec(MediaTypeDto.class);
-    q.addFilter(PathSpec.of("mediaType").filter(FilterOperator.LIKE, "%jpeg%"));
-    List<MediaTypeDto> mediaTypeList = mediaTypeRepository.findAll(q);
-
+    // dina-base 0.144 required
+    List<MediaTypeDto> mediaTypeList = mediaTypeRepository.findAll("filter[mediaType][LIKE]=%jpeg%");
     assertTrue(mediaTypeList.stream()
             .anyMatch(mt -> MediaType.IMAGE_JPEG_VALUE.equals(mt.getMediaType())));
   }
-
-
 }
